--- a/4.Singleton.md
+++ b/4.Singleton.md
@@ -102,7 +102,7 @@ public enum Singleton {
     }
 }
 ```
-不仅能避免多线程同步问题，而且还能防止反序列化重新创建新的对象。enum是jdk5新加入的,继承至Enum的类都为final,且不能继承其他类和实现其他接口,equals,hashCode,compareTo等部分方法不能重写。
+不仅能避免多线程同步问题，而且还能防止反序列化重新创建新的对象。enum是jdk5新加入的,继承至Enum的类都为final,且不能继承其他类,equals,hashCode,compareTo等部分方法不能重写。
 
 7. 容器实现单例模式
 ```java
