--- a/3.AbstractFactory.md
+++ b/3.AbstractFactory.md
@@ -5,7 +5,7 @@
 抽象工厂模式的用意为：给客户端提供一个接口，可以创建多个产品族中的产品对象。
 
 示例类图:
-![SimpleFactory](images/3.AbstractFactory_uml.png)
+![AbstractFactory_uml](images/3.AbstractFactory_uml.png)
 
 示例代码:
 ```java
