--- a/5.Builder.md
+++ b/5.Builder.md
@@ -19,8 +19,8 @@
 2. 如果产品的内部变化复杂，可能会导致需要定义很多具体建造者类来实现这种变化，导致系统变得很庞大。
 
 示例类图:
-![SimpleFactory](images/5.Builder_uml.png)
-![SimpleFactory](images/5.Builder2_uml.png)
+![Builder_uml](images/5.Builder_uml.png)
+![Builder2_uml](images/5.Builder2_uml.png)
 
 示例代码:
 ```java
