--- a/6.Prototype.md
+++ b/6.Prototype.md
@@ -17,16 +17,26 @@
 public class Cookie implements Cloneable, Serializable {
 	private static final long serialVersionUID = 1L;
 	protected String type = "饼干";
+	protected Date createTime = new Date();
+
+	public void setCreateTime(Date createTime) {
+		this.createTime = createTime;
+	}
 
 	@Override
 	public String toString() {
-		return "[type=" + type + "] " + hashCode();
+		return "[type=" + type + "createTime=" + createTime.getTime() + "] " + hashCode();
 	}
 
 	// 浅复制
 	@Override
-	public Object clone() throws CloneNotSupportedException {
-		return (Cookie) super.clone();
+	public Cookie clone() {
+		try {
+			return (Cookie) super.clone();
+		} catch (CloneNotSupportedException e) {
+			e.printStackTrace();
+		}
+		return null;
 	}
 
 	// 深复制
@@ -46,6 +56,7 @@ public class Cookie implements Cloneable, Serializable {
 		return null;
 	}
 }
+// ConcretePrototype
 public class SweetCookie extends Cookie {
 	private static final long serialVersionUID = 1L;
 
@@ -53,7 +64,6 @@ public class SweetCookie extends Cookie {
 		this.type = "小甜饼";
 	}
 }
-
 
 // Client
 public class CookieMachine {
@@ -64,12 +74,8 @@ public class CookieMachine {
 	}
 
 	public Cookie makeCookie() {
-		try {
-			return (Cookie) cookie.clone();
-		} catch (CloneNotSupportedException e) {
-			e.printStackTrace();
-		}
-		return null;
+		// return cookie.clone();
+		return cookie.deepClone();
 	}
 
 	public static void main(String args[]) {
@@ -77,10 +83,20 @@ public class CookieMachine {
 		Cookie prototype = new SweetCookie();
 		CookieMachine cm = new CookieMachine(prototype); // 设置原型
 		for (int i = 0; i < 5; i++) {
+			sleep();
+			Cookie cookieNew = cm.makeCookie();
+			cookieNew.setCreateTime(new Date());// 设置新时间
 			// 通过复制原型返回多个cookie
-			cookies.add(cm.makeCookie());
+			cookies.add(cookieNew);
 		}
 		System.out.println(cookies);
+	}
+
+	static void sleep() {
+		try {
+			Thread.sleep(200);
+		} catch (InterruptedException e) {
+		}
 	}
 }
 
