--- a/1.SimpleFactory.md
+++ b/1.SimpleFactory.md
@@ -6,7 +6,7 @@
 但是每增加一个产品,都要在工厂类中增加相应的商业逻辑和判 断逻辑,这显自然是违背开闭原则.
 
 示例类图:
-![SimpleFactory](images/1.SimpleFactory_uml.png)
+![SimpleFactory_uml](images/1.SimpleFactory_uml.png)
 
 示例代码:
 ```java
