--- a/2.FactoryMethod.md
+++ b/2.FactoryMethod.md
@@ -8,7 +8,7 @@
 降低了客户程序和产品对象之间的耦合。
 
 示例类图:
-![SimpleFactory](images/2.FactoryMethod_uml.png)
+![FactoryMethod_uml](images/2.FactoryMethod_uml.png)
 
 示例代码:
 ```java
