--- a/1.SimpleFactory.md
+++ b/1.SimpleFactory.md
@@ -1,14 +1,14 @@
 # Simple Factory 简单(静态)工厂模式
 
-简单工厂模式:
+- 简单工厂模式:
 含有一定的商业逻辑和判断逻辑，根据逻辑不同，产生具体的工厂产品,对于客户端去除了对具体产品的依赖.
 对产品来说它是符合开闭原则的——对扩展开放,对修改关闭;
 但是每增加一个产品,都要在工厂类中增加相应的商业逻辑和判 断逻辑,这显自然是违背开闭原则.
 
-示例类图:
+- 示例类图:
 ![SimpleFactory_uml](images/1.SimpleFactory_uml.png)
 
-示例代码:
+- 示例代码:
 ```java
 // 产品
 public interface Sender {
