--- a/12.Bridge.md
+++ b/12.Bridge.md
@@ -2,8 +2,10 @@
 
 - 桥接模式:
 桥接模式把事物对象和其具体行为、具体特征分离开来，使它们可以各自独立的变化。
+又称为柄体(Handle and Body)模式或接口(Interface)模式。
 事物对象仅是一个抽象的概念。
 用意就在将抽象化与实现化解耦，使得二者可以独立变化。
+
 - 动机
 当一种抽象类型可能有多种实现方式时，一般情况我们可以考虑使用继承来解决抽象类型的多种实现，在抽象类型中定义接口，而子类负责接口的具体实现。
 但这种做法缺乏灵活性，由于抽象类型和子类之间紧紧地绑定在一起，使得这种关系在运行时不能再修改，
