--- a/13.Flyweight.md
+++ b/13.Flyweight.md
@@ -2,7 +2,9 @@
 
 - 享元模式模式:
 享元模式的主要目的是实现对象的共享，即共享池，当系统中对象多的时候可以减少内存的开销，
-意图在于运用共享技术有效地支持大量细粒度的对象。通常与工厂模式一起使用。
+意图在于运用共享技术有效地支持大量细粒度的对象。
+由于享元模式要求能够共享的对象必须是细粒度对象，因此它又称为轻量级模式，它是一种对象结构型模式。
+通常与工厂模式一起使用。
 
 它使用共享物件，用来尽可能减少内存使用量以及分享资讯给尽可能多的相似物件；
 它适合用于当大量物件只是重复因而导致无法令人接受的使用大量内存。通常物件中的部分状态是可以分享。
