--- a/2.FactoryMethod.md
+++ b/2.FactoryMethod.md
@@ -1,16 +1,17 @@
 # Factory Method 工厂方法模式
 
-工厂方法模式:
+- 工厂方法模式:
+
 1. 核心,定义一个创建对象的接口/抽象类,让子类来决定实例化哪一个类,使实例化延迟到子类。
 当有新的产品产生时,只要按照产品接口和工厂接口来生成,就可以被客户端使用,而不必改码.
 所以工厂方法模式是完全符合开闭原则的。
 2. 工厂方法克服了简单工厂违背开放封闭原则的缺点,又保持了封装对象创建过程的优点。
 降低了客户程序和产品对象之间的耦合。
 
-示例类图:
+- 示例类图:
 ![FactoryMethod_uml](images/2.FactoryMethod_uml.png)
 
-示例代码:
+- 示例代码:
 ```java
 // 产品
 public interface Sender {
@@ -75,4 +76,5 @@ public class FactoryTest {
 ```
 
 工厂方法是简单工厂的进一步抽象和推广,由于使用了多态性，所以每增加一个产品就要增加一个对应的产品工厂类,增加了额外的开发量。
-当产品种类非常多时，就会出现大量的与之对应的工厂类，使用简单工厂模式与工厂方法模式相结合的方式可以减少工厂类：即对于产品树上类似的种类（一般是树的叶子中互为兄弟的）使用简单工厂模式来实现。
+当产品种类非常多时，就会出现大量的与之对应的工厂类，使用简单工厂模式与工厂方法模式相结合的方式可以减少工厂类：
+即对于产品树上类似的种类（一般是树的叶子中互为兄弟的）使用简单工厂模式来实现。
