--- a/3.AbstractFactory.md
+++ b/3.AbstractFactory.md
@@ -1,13 +1,17 @@
 # Abstract Factory 抽象工厂模式
 
-抽象工厂模式:
-它和工厂方法模式的区别就在于需要创建对象的复杂程度上。而且抽象工厂模式是三个里面最为抽象,最具一般性的。
+- 抽象工厂模式:
+也称为Kit模式,它和工厂方法模式的区别就在于需要创建对象的复杂程度上。而且抽象工厂模式是三个里面最为抽象,最具一般性的。
 抽象工厂模式的用意为：给客户端提供一个接口，可以创建多个产品族中的产品对象。
 
-示例类图:
+> 抽象工厂模式与工厂方法模式最大的区别在于，工厂方法模式针对的是一个产品等级结构，
+而抽象工厂模式需要面对多个产品等级结构，一个工厂等级结构可以负责多个不同产品等级结构中的产品对象的创建。
+当一个工厂等级结构可以创建出分属于不同产品等级结构的一个产品族中的所有对象时，抽象工厂模式比工厂方法模式更为简单、更有效率。
+
+- 示例类图:
 ![AbstractFactory_uml](images/3.AbstractFactory_uml.png)
 
-示例代码:
+- 示例代码:
 ```java
 // 产品树
 public abstract class AbstractMailSender {
@@ -120,7 +124,6 @@ public class FactoryTest {
 	}
 
 }
-
 ```
 
 抽象工厂模式的缺点：如果需要增加新的产品树，那么就要新增三个类,
@@ -131,10 +134,10 @@ public class FactoryTest {
 
 - 简单工厂+抽象工厂:
 
-示例类图:
+- 示例类图:
 ![SimpleFactory](images/3.SimpleAndAbstractFactory_uml.png)
 
-示例代码:
+- 示例代码:
 ```java
 // 产品代码与上面一致
    ...
