--- a/6.Prototype.md
+++ b/6.Prototype.md
@@ -8,10 +8,10 @@
 的实例使程序运行更高效；或者创建值相等，只是命名不一样的同类数据。
 
 
-示例类图:
+- 示例类图:
 ![SimpleFactory](images/6.Prototype_uml.png)
 
-示例代码:
+- 示例代码:
 ```java
 // Prototype Class
 public class Cookie implements Cloneable, Serializable {
