--- a/10.Facade.md
+++ b/10.Facade.md
@@ -2,7 +2,7 @@
 
 - 外观模式:
 是软件工程中常用的一种软件设计模式，它为子系统中的一组接口提供一个统一的高层接口，使得子系统更容易使用。
-外观模式是为了解决类与类之家的依赖关系的，就是将他们的关系放在一个Facade类中，降低了类类之间的耦合度，该模式中一般不涉及到接口。
+外观模式是为了解决类与类之间的依赖关系的，就是将他们的关系放在一个Facade类中，降低了类类之间的耦合度，该模式中一般不涉及到接口。
 
 - 示例类图:
 ![Facade_uml](images/10.Facade_uml.png)
@@ -61,7 +61,7 @@ public class Computer {
 ```
 
 - 抽象外观模式
-- 外观模式最大的缺点在于违背了“开闭原则”，
+> 外观模式最大的缺点在于违背了“开闭原则”，
 当增加新的子系统或者移除子系统时需要修改外观类，可以通过引入抽象外观类在一定程度上解决该问题，客户端针对抽象外观类进行编程。
 对于新的业务需求，不修改原有外观类，而对应增加一个新的具体外观类，由新的具体外观类来关联新的子系统对象，
 同时通过修改配置文件来达到不修改源代码并更换外观类的目的。
