--- a/16.Observer.md
+++ b/16.Observer.md
@@ -1,8 +1,12 @@
 # Observer 观察者模式
 
 - 观察者模式:
-有时被称作发布/订阅模式(Publish/Subscribe)，观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个主题对象。
-这个主题对象在状态发生变化时，会通知所有观察者对象，使它们能够自动更新自己。
+观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个主题对象。
+这个主题对象在状态发生变化时，会通知所有观察者对象，使它们能够自动更新自己。观察者模式是一种对象行为型模式。
+
+- 观察者模式的别名包括:
+发布-订阅(Publish/Subscribe)模式, 模型-视图(Model/View)模式,
+源-监听器(Source/Listener)模式, 从属者(Dependents)模式。
 
 - 结构图:
 ![Observer_structure](images/16.Observer_structure.png)
