--- a/4.Singleton.md
+++ b/4.Singleton.md
@@ -1,21 +1,23 @@
 # Singleton 单例模式
 
 
-单例模式:
+- 单例模式:
+
 1. 单例类只能有一个实例。
 2. 单例类必须自己创建自己的唯一实例。
 3. 单例类必须给所有其他对象提供这一实例。
 
 - 好处:
+
 1. 某些类创建比较频繁，对于一些大型的对象，这是一笔很大的系统开销。
 2. 省去了new操作符，降低了系统内存的使用频率，减轻GC压力。
 3. 有些类如交易所的核心交易引擎，控制着交易流程，如果该类可以创建多个的话，系统完全乱了。（比如一个军队出现了多个司令员同时指挥，肯定会乱成一团），所以只有使用单例模式，才能保证核心交易服务器独立控制整个流程。
 
 
-示例类图:
+- 示例类图:
 ![Singleton_uml](images/4.Singleton_uml.png)
 
-示例代码:
+- 示例代码:
 
 1. 饿汉式(线程安全)
 ```java
