--- a/8.Decorator.md
+++ b/8.Decorator.md
@@ -11,7 +11,6 @@
 继承为类型引入的静态特质的意思是说以继承的方式使某一类型要获得功能是在编译时。
 所谓静态，是指在编译时；动态，是指在运行时。
 
-
 - 示例类图:
 ![Decorator_uml](images/8.Decorator_uml.png)
 
@@ -83,8 +82,8 @@ public class DecoratorTest {
 ```
 
 
-- 从执行的结果不难看出扩展功能已被添加。最后再说说Decorator装饰模式的几点要
-点：
+- Decorator装饰模式的几点要点：
+
 1. 通过采用组合、而非继承的手法，Decorator模式实现了在运行时动态的扩展对象功能的能力，
 而且可以根据需要扩展多个功能。避免了单独使用继承带来的“灵活性差”和“多子类衍生问题”。
 
@@ -95,15 +94,17 @@ Decorator类是从外部来扩展Component类的功能。
 3. Decorator类在接口上表现为is-a Component的继承关系，即Decorator类继承了Component类所具有的接口。
 但在实现上又表现为has-a Component的组合关系，即Decorator类又使用了另外一个Component类。
 我们可以使用一个或多个Decorator对象来“装饰”一个Component对象，且装饰后的对象仍然是一个Component对象。
-（在这里我想谈一下我的理解：当我们实例化一个Component对象后，要给这个对象扩展功能，
+
+在这里我想谈一下我的理解：当我们实例化一个Component对象后，要给这个对象扩展功能,
 这时我们把这个Component对象当作参数传给Decorator的子类的构造函数——也就是扩展方法的功能类。
-对于引用类型传参时，实际上只是传递对象的地址，这样，在功能扩展是，操作的应该是同一个对象）
+对于引用类型传参时，实际上只是传递对象的地址，这样，在功能扩展是，操作的应该是同一个对象。
 
 4. Decorator模式并非解决“多子类衍生的多继承”问题，Decorator模式应用的要点在于解决“主体类在多个方向上的扩展功能”——是为“装饰”的含义。
 Decorator是在运行时对功能进行组合。
 
 - 装饰器模式的应用场景：
+
 1. 需要扩展一个类的功能。
-2. 动态的为一个对象增加功能，而且还能动态撤销。（继承不能做到这一点，继承的功能是静态的，不能动态增
-删。）
+2. 动态的为一个对象增加功能，而且还能动态撤销。(继承不能做到这一点，继承的功能是静态的，不能动态增删)
+
 - 缺点：产生过多相似的对象，不易排错。
