--- a/9.Proxy.md
+++ b/9.Proxy.md
@@ -1,14 +1,13 @@
 # Proxy 代理模式
 
 - 代理模式:
-在某些情况下，一个客户不想或者不能直接引用一个对象，此时可以通过一个称之
-为“代理”的第三者来实现 间接引用。代理对象可以在客户端和目标对象之间起到 中
-介的作用，并且可以通过代理对象去掉客户不能看到 的内容和服务或者添加客户需
-要的额外服务。
+给某一个对象提供一个代理或占位符，并由代理对象来控制对原对象的访问。
+在某些情况下，一个客户不想或者不能直接引用一个对象，此时可以通过一个称之为“代理”的第三者来实现间接引用。
+代理对象可以在客户端和目标对象之间起到中介的作用，并且可以通过代理对象去掉客户不能看到的内容和服务或者添加客户需要的额外服务。
+
 - 代理模式分为静态代理、动态代理。
 静态代理是由程序员创建或工具生成代理类的源码，再编译代理类。所谓静态也就是在程序运行前就已经存在代理类的字节码文件，代理类和委托类的关系在运行前就确定了。
 动态代理是在实现阶段不用关心代理类，而在运行阶段才指定哪一个对象。
-
 
 - 示例类图:
 ![DynamicProxy_uml.png](images/9.StaticProxy_uml.png)
@@ -129,6 +128,7 @@ public class ProxyTest {
 ```
 
 - 代理模式的应用场景：
+
 如果已有的方法在使用的时候需要对原有的方法进行改进，此时有两种办法：
 1、修改原有的方法来适应。这样违反了“对扩展开放，对修改关闭”的原则。
 2、就是采用一个代理类调用原有的方法，且对产生的结果进行控制。这种方法就是代理模式。
