--- a/10.Facade.md
+++ b/10.Facade.md
@@ -5,7 +5,7 @@
 外观模式是为了解决类与类之间的依赖关系的，就是将他们的关系放在一个Facade类中，降低了类类之间的耦合度，该模式中一般不涉及到接口。
 
 - 示例类图:
-![Facade_uml](images/10.Facade_uml.png)
+![Facade_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/10.Facade_uml.png)
 
 - 示例代码:
 ```java
@@ -67,7 +67,7 @@ public class Computer {
 同时通过修改配置文件来达到不修改源代码并更换外观类的目的。
 
 - 示例类图:
-![AbstractFacade_uml](images/10.AbstractFacade_uml.png)
+![AbstractFacade_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/10.AbstractFacade_uml.png)
 
 - 示例代码:
 ```java
