--- a/11.Composite.md
+++ b/11.Composite.md
@@ -9,10 +9,10 @@
 客户程序可以向处理简单元素一样来处理复杂元素,从而使得客户程序与复杂元素的内部结构解耦。
 
 - 结构图:
-![Composite_structure](images/11.Composite_structure.png)
+![Composite_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/11.Composite_structure.png)
 
 - 示例类图:
-![Composite_uml](images/11.Composite_uml.png)
+![Composite_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/11.Composite_uml.png)
 
 - 示例代码:
 ```java
