--- a/12.Bridge.md
+++ b/12.Bridge.md
@@ -12,7 +12,7 @@
 这使得它难以修改、扩展和重用不利于抽象和实现解耦，而且这也违背OOP原则：“优先使用对象聚集，而不是继承”。
 
 - 结构图:
-![Bridge_structure](images/12.Bridge_structure.png)
+![Bridge_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/12.Bridge_structure.png)
 
 1. Abstraction
 抽象部分的接口。通常在这个对象里面，要维护一个实现部分的对象引用，在抽象对象里面的方法，
@@ -27,7 +27,7 @@
 真正实现Implementor接口的对象。
 
 - 示例类图:
-![Bridge_uml](images/12.Bridge_uml.png)
+![Bridge_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/12.Bridge_uml.png)
 
 - 示例代码:
 ```java
