--- a/13.Flyweight.md
+++ b/13.Flyweight.md
@@ -11,10 +11,10 @@
 常见做法是把它们放在外部数据结构，当需要使用时再将它们传递给享元。
 
 - 结构图:
-![Flyweight_structure](images/13.Flyweight_structure.png)
+![Flyweight_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/13.Flyweight_structure.png)
 
 - 示例类图:
-![Flyweight_uml](images/13.Flyweight_uml.png)
+![Flyweight_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/13.Flyweight_uml.png)
 
 - 示例代码:
 ```java
