--- a/14.Strategy.md
+++ b/14.Strategy.md
@@ -6,10 +6,10 @@
 减少各种算法类与使用类之间的耦合。策略模式是一种对象行为型模式。
 
 - 结构图:
-![Strategy_structure](images/14.Strategy_structure.png)
+![Strategy_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/14.Strategy_structure.png)
 
 - 示例类图:
-![Strategy_uml](images/14.Strategy_uml.png)
+![Strategy_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/14.Strategy_uml.png)
 
 - 示例代码:
 ```java
