--- a/15.TemplateMethod.md
+++ b/15.TemplateMethod.md
@@ -10,7 +10,7 @@
 从而使得相同的算法框架可以有不同的执行结果。模板方法模式提供了一个模板方法来定义算法框架，而某些具体步骤的实现可以在其子类中完成。
 
 - 示例类图:
-![TemplateMethod_uml](images/15.TemplateMethod_uml.png)
+![TemplateMethod_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/15.TemplateMethod_uml.png)
 
 - 示例代码:
 ```java
