--- a/16.Observer.md
+++ b/16.Observer.md
@@ -9,10 +9,10 @@
 源-监听器(Source/Listener)模式, 从属者(Dependents)模式。
 
 - 结构图:
-![Observer_structure](images/16.Observer_structure.png)
+![Observer_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/16.Observer_structure.png)
 
 - 示例类图:
-![Observer_uml](images/16.Observer_uml.png)
+![Observer_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/16.Observer_uml.png)
 
 - 示例代码:
 ```java
