--- a/17.Iterator.md
+++ b/17.Iterator.md
@@ -7,7 +7,7 @@
 
 
 - 示例类图:
-![Iterator_uml](images/17.Iterator_uml.png)
+![Iterator_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/17.Iterator_uml.png)
 
 - 示例代码:
 ```java
