--- a/18.ChainOfResponsibility.md
+++ b/18.ChainOfResponsibility.md
@@ -12,7 +12,7 @@
 3. 可动态指定一组对象处理请求。
 
 - 示例类图:
-![ChainOfResponsibility_uml](images/18.ChainOfResponsibility_uml.png)
+![ChainOfResponsibility_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/18.ChainOfResponsibility_uml.png)
 
 - 示例代码:
 ```java
