--- a/2.FactoryMethod.md
+++ b/2.FactoryMethod.md
@@ -9,7 +9,7 @@
 降低了客户程序和产品对象之间的耦合。
 
 - 示例类图:
-![FactoryMethod_uml](images/2.FactoryMethod_uml.png)
+![FactoryMethod_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/2.FactoryMethod_uml.png)
 
 - 示例代码:
 ```java
