--- a/21.State.md
+++ b/21.State.md
@@ -5,10 +5,10 @@
 其别名为状态对象(Objects for States)，状态模式是一种对象行为型模式。
 
 - 结构图:
-![State_structure](images/21.State_structure.png)
+![State_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/21.State_structure.png)
 
 - 示例类图:
-![State_uml](images/21.State_uml.png)
+![State_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/21.State_uml.png)
 
 - 示例代码:
 ```java
