--- a/22.Visitor.md
+++ b/22.Visitor.md
@@ -6,10 +6,10 @@
 
 
 - 结构图:
-![Visitor_structure](images/22.Visitor_structure.png)
+![Visitor_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/22.Visitor_structure.png)
 
 - 示例类图:
-![Visitor_uml](images/22.Visitor_uml.png)
+![Visitor_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/22.Visitor_uml.png)
 
 - 示例代码:
 ```java
