--- a/23.Mediator.md
+++ b/23.Mediator.md
@@ -5,10 +5,10 @@
 而且可以独立地改变它们之间的交互。中介者模式又称为调停者模式，它是一种对象行为型模式。
 
 - 结构图:
-![Mediator_structure](images/23.Mediator_structure.png)
+![Mediator_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/23.Mediator_structure.png)
 
 - 示例类图:
-![Mediator_uml](images/23.Mediator_uml.png)
+![Mediator_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/23.Mediator_uml.png)
 
 - 示例代码:
 ```java
