--- a/24.Interpreter.md
+++ b/24.Interpreter.md
@@ -6,10 +6,10 @@
 因此解释器模式的结构与组合模式的结构有些类似，但在解释器模式中包含更多的组成元素。
 
 - 结构图:
-![Interpreter_structure](images/24.Interpreter_structure.png)
+![Interpreter_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/24.Interpreter_structure.png)
 
 - 示例类图:
-![Interpreter_uml](images/24.Interpreter_uml.png)
+![Interpreter_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/24.Interpreter_uml.png)
 
 - 示例代码:
 ```java
