--- a/3.AbstractFactory.md
+++ b/3.AbstractFactory.md
@@ -9,7 +9,7 @@
 当一个工厂等级结构可以创建出分属于不同产品等级结构的一个产品族中的所有对象时，抽象工厂模式比工厂方法模式更为简单、更有效率。
 
 - 示例类图:
-![AbstractFactory_uml](images/3.AbstractFactory_uml.png)
+![AbstractFactory_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/3.AbstractFactory_uml.png)
 
 - 示例代码:
 ```java
@@ -135,7 +135,7 @@ public class FactoryTest {
 - 简单工厂+抽象工厂:
 
 - 示例类图:
-![SimpleFactory](images/3.SimpleAndAbstractFactory_uml.png)
+![SimpleFactory](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/3.SimpleAndAbstractFactory_uml.png)
 
 - 示例代码:
 ```java
