--- a/4.Singleton.md
+++ b/4.Singleton.md
@@ -1,6 +1,5 @@
 # Singleton 单例模式
 
-
 - 单例模式:
 
 1. 单例类只能有一个实例。
@@ -15,7 +14,7 @@
 
 
 - 示例类图:
-![Singleton_uml](images/4.Singleton_uml.png)
+![Singleton_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/4.Singleton_uml.png)
 
 - 示例代码:
 
