--- a/6.Prototype.md
+++ b/6.Prototype.md
@@ -9,7 +9,7 @@
 
 
 - 示例类图:
-![SimpleFactory](images/6.Prototype_uml.png)
+![Prototype_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/6.Prototype_uml.png)
 
 - 示例代码:
 ```java
