--- a/7.Adapter.md
+++ b/7.Adapter.md
@@ -27,7 +27,7 @@
 4. 灵活性非常好。不想要适配器时，删掉这个适配器就好了，其他代码不用改。
 
  类适配器示例类图:
-![Adapter1_uml](images/7.Adapter1_uml.png)
+![Adapter1_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/7.Adapter1_uml.png)
 
 - 类适配器示例代码:
 ```java
