--- a/8.Decorator.md
+++ b/8.Decorator.md
@@ -12,7 +12,7 @@
 所谓静态，是指在编译时；动态，是指在运行时。
 
 - 示例类图:
-![Decorator_uml](images/8.Decorator_uml.png)
+![Decorator_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/8.Decorator_uml.png)
 
 - 示例代码:
 ```java
