--- a/9.Proxy.md
+++ b/9.Proxy.md
@@ -10,8 +10,8 @@
 动态代理是在实现阶段不用关心代理类，而在运行阶段才指定哪一个对象。
 
 - 示例类图:
-![DynamicProxy_uml.png](images/9.StaticProxy_uml.png)
-![DynamicProxy_uml.png](images/9.DynamicProxy_uml.png)
+![DynamicProxy_uml.png](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/9.StaticProxy_uml.png)
+![DynamicProxy_uml.png](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/9.DynamicProxy_uml.png)
 
 - 示例代码:
 ```java
