--- a/19.Command.md
+++ b/19.Command.md
@@ -6,10 +6,10 @@
 命令模式是一种对象行为型模式，其别名为动作(Action)模式或事务(Transaction)模式。
 
 - 结构图:
-![Command_structure](images/19.Command_structure.png)
+![Command_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/19.Command_structure.png)
 
 - 示例类图:
-![Command_uml](images/19.Command_uml.png)
+![Command_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/19.Command_uml.png)
 
 - 示例代码:
 ```java
