--- a/20.Memento.md
+++ b/20.Memento.md
@@ -5,10 +5,10 @@
 这样可以在以后将对象恢复到原先保存的状态。它是一种对象行为型模式，其别名为Token。
 
 - 结构图:
-![Memento_structure](images/20.Memento_structure.png)
+![Memento_structure](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/20.Memento_structure.png)
 
 - 示例类图:
-![Memento_uml](images/20.Memento_uml.png)
+![Memento_uml](http://git.oschina.net/longshu/DesignPatterns/raw/master/images/20.Memento_uml.png)
 
 - 示例代码:
 ```java
