--- a/4.Singleton.md
+++ b/4.Singleton.md
@@ -108,20 +108,22 @@ public enum Singleton {
 7. 容器实现单例模式
 ```java
 public class SingletonManager {
-	private static Map<String, Object> objMap = new HashMap<String, Object>();
+    private static Map<String, Object> objMap = new HashMap<String, Object>();
 
-	private SingletonManager() {
-	}
+    private SingletonManager() {
+    }
 
-	public static void registerService(String key, Object instance) {
-		if (!objMap.containsKey(key)) {
-			objMap.put(key, instance);
-		}
-	}
+    public static void registerService(String key, Object instance) {
+        synchronized (objMap) { // 或者使用 ConcurrentHashMap
+            if (!objMap.containsKey(key)) {
+                objMap.put(key, instance);
+            }
+        }
+    }
 
-	public static Object getService(String key) {
-		return objMap.get(key);
-	}
+    public static Object getService(String key) {
+        return objMap.get(key);
+    }
 }
 ```
 用SingletonManager 将多种的单例类统一管理，在使用时根据key获取对象对应类型的对象。
